add basic contact information
fix lint errors

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 <head>
-  <meta charset="utf-8"/>
+  <title>Sofia Martinez's Resume</title>
+  <meta charset="utf-8" />
 </head>
 <body>
+  <!---Contact Information Section--->
+  <section>
+    <h1>Sofia Martinez</h1>
+    <h3>smartinez@hawk.iit.edu</h2>
+    <h3>(312)256-5136</h2>
+  </section>
 </body>
 </html>
