add skills section to resume
fix errors and tags

--- a/resume/index.html
+++ b/resume/index.html
@@ -5,11 +5,22 @@
   <meta charset="utf-8" />
 </head>
 <body>
-  <!---Contact Information Section--->
-  <section>
+  <header>
+    <!--Contact Information-->
     <h1>Sofia Martinez</h1>
-    <h3>smartinez@hawk.iit.edu</h2>
-    <h3>(312)256-5136</h2>
+    <h2>smartinez@hawk.iit.edu</h2>
+    <h2>(312)256-5136</h2>
+  </header>
+  <section>
+    <!--Skills Section-->
+    <section>
+      <li>Knowledgeable with fundamental JAVA and C++ applications</li>
+      <li>Experienced with Eclipse and Visual Studio IDE's</li>
+      <li>Skilled with Linux and Window OS's</li>
+      <li>Adept with Microsoft Word, PowerPoint, and Excel</li>
+      <li>80WPM typist</li>
+      <li>Fluent in Spanish; Seal of Biliteracy recipient</li>
+    </section>
   </section>
 </body>
 </html>
