add education section to resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -14,13 +14,34 @@
   <section>
     <!--Skills Section-->
     <section>
-      <li>Knowledgeable with fundamental JAVA and C++ applications</li>
-      <li>Experienced with Eclipse and Visual Studio IDE's</li>
-      <li>Skilled with Linux and Window OS's</li>
-      <li>Adept with Microsoft Word, PowerPoint, and Excel</li>
-      <li>80WPM typist</li>
-      <li>Fluent in Spanish; Seal of Biliteracy recipient</li>
+      <h2>Skills</h2>
+      <!--unordered list for skill-->
+      <ul>
+        <li>Knowledgeable with fundamental JAVA and C++ applications</li>
+        <li>Experienced with Eclipse and Visual Studio IDE's</li>
+        <li>Skilled with Linux and Window OS's</li>
+        <li>Adept with Microsoft Word, PowerPoint, and Excel</li>
+        <li>80WPM typist</li>
+        <li>Fluent in Spanish; Seal of Biliteracy recipient</li>
+      </ul>
     </section>
+    <!--Education Section-->
+    <section>
+      <h2>Education</h2>
+      <h3>Illinois Intitutite of Technology</h3>
+      <h4>Bachelor of Information Technology and Management</h4>
+      <ul>
+        <li>Expected May 2021</li>
+        <li>Fall 2017 and Spring 2018 Dean's List</li>
+      </ul>
+      <h3>Jones College Prep</h3>
+      <h4>High School Diploma</h4>
+      <ul>
+        <li>August 2013 - June 2017</li>
+        <li>National Honors Society</li>
+      </ul>
+    </section>
+
   </section>
 </body>
 </html>
