--- a/resume/index.html
+++ b/resume/index.html
@@ -15,7 +15,7 @@
     <!--Skills Section-->
     <section>
       <h2>Skills</h2>
-      <!--unordered list for skill-->
+      <!--unordered list for skills-->
       <ul>
         <li>Knowledgeable with fundamental JAVA and C++ applications</li>
         <li>Experienced with Eclipse and Visual Studio IDE's</li>
@@ -40,6 +40,36 @@
         <li>August 2013 - June 2017</li>
         <li>National Honors Society</li>
       </ul>
+    </section>
+    <!--Work Experience Section-->
+    <section>
+        <h2>Experience</h2>
+        <!--CYC-->
+        <h3>Chicago Youth Centers</h3>
+        <h4>Maker Lab Assistant</h4>
+        <h4>Summer Program Aide</h4>
+        <ul>
+          <li>Implementing STEM-based programs to engage and inspire young audiences</li>
+          <li>Preparing original lesson plans and creativing activities for various programs</li>
+          <li>Collaborating with coworkers to organize and schedule workshops and events</li>
+          <li>Maintaining technology to keep software and hardware in good condition for successful use</li>
+        </ul>
+        <!--MSI-->
+        <h3>Museum of Science and Industry</h3>
+        <h4>Demonstration Facilitator</h4>
+        <ul>
+          <li>Learned material and gave presentations on various science topics to museum guests</li>
+          <li>Provided relevant answers to questions regarding the demonstration subject</li>
+          <li>Improvised and tailored presentations to match the needs of different guest groups</li>
+        </ul>
+        <!--ASM-->
+        <h3>After School Matters</h3>
+        <h4>Stained Glass Artist</h4>
+        <ul>
+          <li>Created individual stained-glass artworks that met deadlines and requirements</li>
+          <li>Collaborated with peers to design and develop complex projects</li>
+          <li>Provided quality art pieces for the ASM store upon revising work after feedback</li>
+        </ul>
     </section>
 
   </section>
