Fixed mistakes highlighted by validator

--- a/resume/index.html
+++ b/resume/index.html
@@ -71,7 +71,15 @@
           <li>Provided quality art pieces for the ASM store upon revising work after feedback</li>
         </ul>
     </section>
-
+    <!--Activities Section-->
+    <section>
+      <h2>Activities</h2>
+      <ul>
+        <li>Mentor Match Engine - Mentoring High School Students (2017-Present)</li>
+        <li>Greater Chicago Food Depository - Food Repack Sessions (2016-Present)</li>
+        <li>Anti-Cruelty Society - DIY Pet Beds (2016-2017)</li>
+      </ul>
+    </section>
   </section>
 </body>
 </html>
