Fix spelling errors

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Sofia Martinez's Resume</title>
+  <title>Resume for Sofia Martinez</title>
   <meta charset="utf-8" />
 </head>
 <body>
@@ -28,7 +28,7 @@
     <!--Education Section-->
     <section>
       <h2>Education</h2>
-      <h3>Illinois Intitutite of Technology</h3>
+      <h3>Illinois Institute of Technology</h3>
       <h4>Bachelor of Information Technology and Management</h4>
       <ul>
         <li>Expected May 2021</li>
@@ -50,7 +50,7 @@
         <h4>Summer Program Aide</h4>
         <ul>
           <li>Implementing STEM-based programs to engage and inspire young audiences</li>
-          <li>Preparing original lesson plans and creativing activities for various programs</li>
+          <li>Preparing original lesson plans and creating activities for various programs</li>
           <li>Collaborating with coworkers to organize and schedule workshops and events</li>
           <li>Maintaining technology to keep software and hardware in good condition for successful use</li>
         </ul>
