add two classes
ITM 301 and ITM 311

--- a/courses/index.html
+++ b/courses/index.html
@@ -6,6 +6,17 @@
 </head>
 <body>
   <header>
+    <h1>Summary of courses related to IT taken at the Illinois Institute of Technology</h1>
   </header>
+  <section>
+    <h2>ITM 301</h2>
+    <h3>Introduction to OS and Hardware I</h3>
+    <p>This course covered the basics of computer software and hardware including system repair, hardware components, troubleshooting and installation processes.</p>
+  </section>
+  <section>
+    <h2>ITM 311</h2>
+    <h3>Introduction to Software Development</h3>
+    <p>Introduction to object-oriented programming with a focus on JAVA. Included syntax, uses, and the usage of GUI's. The course included the development of original programs.</p>
+  </section>
 </body>
 </html>
