add two courses
ITM0 456 and ITMM 471

--- a/courses/index.html
+++ b/courses/index.html
@@ -18,5 +18,20 @@
     <h3>Introduction to Software Development</h3>
     <p>Introduction to object-oriented programming with a focus on JAVA. Included syntax, uses, and the usage of GUI's. The course included the development of original programs.</p>
   </section>
+  <section>
+    <h2>ITMO 456</h2>
+    <h3>Introduction to Open Source Operating</h3>
+    <p>Content was focused on the installation, basic administration, command-line commands related to open-source operating systems. Primary focus was on the Fedora and Ubuntu distributions of Linux.</p>
+  </section>
+  <section>
+    <h2>ITM 471</h2>
+    <h3>Project Management for Information Technology and Management</h3>
+    <p>The course covered the basics of project management, particularly planning projects that involve hardware, softare, and network implementation.</p>
+  </section>
+  <section>
+    <h2></h2>
+    <h3></h3>
+    <p></p>
+  </section>
 </body>
 </html>
