--- a/courses/index.html
+++ b/courses/index.html
@@ -8,30 +8,46 @@
   <header>
     <h1>Summary of courses related to IT taken at the Illinois Institute of Technology</h1>
   </header>
+  <!--ITM 301-->
   <section>
     <h2>ITM 301</h2>
     <h3>Introduction to OS and Hardware I</h3>
     <p>This course covered the basics of computer software and hardware including system repair, hardware components, troubleshooting and installation processes.</p>
   </section>
+    <!--ITM 311-->
   <section>
     <h2>ITM 311</h2>
     <h3>Introduction to Software Development</h3>
     <p>Introduction to object-oriented programming with a focus on JAVA. Included syntax, uses, and the usage of GUI's. The course included the development of original programs.</p>
   </section>
+    <!--ITMO 456-->
   <section>
     <h2>ITMO 456</h2>
     <h3>Introduction to Open Source Operating</h3>
     <p>Content was focused on the installation, basic administration, command-line commands related to open-source operating systems. Primary focus was on the Fedora and Ubuntu distributions of Linux.</p>
   </section>
+    <!--ITMM 471-->
   <section>
-    <h2>ITM 471</h2>
+    <h2>ITMM 471</h2>
     <h3>Project Management for Information Technology and Management</h3>
     <p>The course covered the basics of project management, particularly planning projects that involve hardware, softare, and network implementation.</p>
   </section>
+    <!--ITMO 440-->
   <section>
+    <h2>ITMO 440</h2>
+    <h3>Introduction to Data Networks and the Internet</h3>
+    <p>Introduction to data networks including network components, Internet architecture, protocols, and network tehcnologies.</p>
+  </section>
+  <!--Add in-progress courses after this-->
+  <!--<section>
     <h2></h2>
     <h3></h3>
     <p></p>
-  </section>
+  </section>-->
+  <!--<section>
+    <h2></h2>
+    <h3></h3>
+    <p></p>
+  </section>-->
 </body>
 </html>
