--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Resume for Sofia Martinez</title>
+  <title>Sofia Martinez's Resume</title>
   <meta charset="utf-8" />
 </head>
 <body>
@@ -10,6 +10,7 @@
     <h1>Sofia Martinez</h1>
     <h2>smartinez@hawk.iit.edu</h2>
     <h2>(312)256-5136</h2>
+    <h2>Chicago, IL</h2>
   </header>
   <section>
     <!--Skills Section-->
