remove stacked headers from ITM 301 and ITM 311
arrange course description into a list instead of a paragraph

--- a/courses/index.html
+++ b/courses/index.html
@@ -10,15 +10,27 @@
   </header>
   <!--ITM 301-->
   <section>
-    <h2>ITM 301</h2>
-    <h3>Introduction to OS and Hardware I</h3>
-    <p>This course covered the basics of computer software and hardware including system repair, hardware components, troubleshooting and installation processes.</p>
-  </section>
+    <ul>
+      <h2>ITM 301</h2>
+      <li>Introduction to OS and Hardware</li>
+      <li>Fall 2017</li>
+      <h3>Course Content:</h2>
+      <li>System repair (software and hardware components)</li>
+      <li>Troubleshooting</li>
+      <li>Installation processes (software, hardware, and OS)</li>
+    </ul>
     <!--ITM 311-->
   <section>
-    <h2>ITM 311</h2>
-    <h3>Introduction to Software Development</h3>
-    <p>Introduction to object-oriented programming with a focus on JAVA. Included syntax, uses, and the usage of GUI's. The course included the development of original programs.</p>
+    <ul>
+      <h2>ITM 311</h2>
+      <li>Introduction to Software Development</li>
+      <li>Fall 2017</li>
+      <h3>Course Content:</h3>
+      <li>Object-oriented programming (focus on JAVA)</li>
+      <li>Proper coding syntax</li>
+      <li>Uses of GUI's</li>
+      <li>Final project consisted of coding an original program</li>
+    </ul>
   </section>
     <!--ITMO 456-->
   <section>
