remove stacked headings from remaining three courses
change course content from paragraphs to list items

--- a/courses/index.html
+++ b/courses/index.html
@@ -19,7 +19,7 @@
       <li>Troubleshooting</li>
       <li>Installation processes (software, hardware, and OS)</li>
     </ul>
-    <!--ITM 311-->
+  <!--ITM 311-->
   <section>
     <ul>
       <h2>ITM 311</h2>
@@ -32,34 +32,40 @@
       <li>Final project consisted of coding an original program</li>
     </ul>
   </section>
-    <!--ITMO 456-->
+  <!--ITMO 456-->
   <section>
-    <h2>ITMO 456</h2>
-    <h3>Introduction to Open Source Operating</h3>
-    <p>Content was focused on the installation, basic administration, command-line commands related to open-source operating systems. Primary focus was on the Fedora and Ubuntu distributions of Linux.</p>
+    <ul>
+      <h2>ITMO 456</h2>
+      <li>Introduction to Open Source Operating Systems</li>
+      <li>Spring 2018</li>
+      <h3>Course Content:</h3>
+      <li>Command-line use</li>
+      <li>Installation and basic administration of Open Source Operating Systems</li>
+      <li>Fedora and Ubuntu distributions of Linux</li>
+    </ul>
   </section>
-    <!--ITMM 471-->
+  <!--ITMM 471-->
   <section>
-    <h2>ITMM 471</h2>
-    <h3>Project Management for Information Technology and Management</h3>
-    <p>The course covered the basics of project management, particularly planning projects that involve hardware, softare, and network implementation.</p>
+    <ul>
+      <h2>ITMM 471</h2>
+      <li>Project Management for Information Technology and Management</li>
+      <li>Spring 2018</li>
+      <h3>Course Content:</h3>
+      <li>Planning projects that involve software, hardware and network implementation</li>
+      <li>Agile Project Management skills</li>
+    </ul>
   </section>
-    <!--ITMO 440-->
+  <!--ITMO 440-->
   <section>
-    <h2>ITMO 440</h2>
-    <h3>Introduction to Data Networks and the Internet</h3>
-    <p>Introduction to data networks including network components, Internet architecture, protocols, and network tehcnologies.</p>
+    <ul>
+      <h2>Introduction to Data Networks and the Internet</h2>
+      <li>ITMO 440</li>
+      <li>Summer 2018</li>
+      <h3>Course Content:</h3>
+      <li>Network components and technologies</li>
+      <li>Internet architecture</li>
+      <li>Protocols and troubleshooting</li>
+    </ul>
   </section>
-  <!--Add in-progress courses after this-->
-  <!--<section>
-    <h2></h2>
-    <h3></h3>
-    <p></p>
-  </section>-->
-  <!--<section>
-    <h2></h2>
-    <h3></h3>
-    <p></p>
-  </section>-->
 </body>
 </html>
