add missing closing tags caught by linter

--- a/courses/index.html
+++ b/courses/index.html
@@ -14,11 +14,12 @@
       <h2>ITM 301</h2>
       <li>Introduction to OS and Hardware</li>
       <li>Fall 2017</li>
-      <h3>Course Content:</h2>
+      <h3>Course Content:</h3>
       <li>System repair (software and hardware components)</li>
       <li>Troubleshooting</li>
       <li>Installation processes (software, hardware, and OS)</li>
     </ul>
+  </section>
   <!--ITM 311-->
   <section>
     <ul>
