add course number and course name classes to appropriate items in each courses section

--- a/courses/index.html
+++ b/courses/index.html
@@ -6,13 +6,13 @@
 </head>
 <body>
   <header>
-    <h1>Summary of courses related to IT taken at the Illinois Institute of Technology</h1>
+    <h1 id="site-description">Summary of courses related to IT taken at the Illinois Institute of Technology</h1>
   </header>
   <!--ITM 301-->
   <section>
     <ul>
-      <h2>ITM 301</h2>
-      <li>Introduction to OS and Hardware</li>
+      <h2 class="course-number">ITM 301</h2>
+      <li class="course-name">Introduction to OS and Hardware</li>
       <li>Fall 2017</li>
       <h3>Course Content:</h3>
       <li>System repair (software and hardware components)</li>
@@ -23,8 +23,8 @@
   <!--ITM 311-->
   <section>
     <ul>
-      <h2>ITM 311</h2>
-      <li>Introduction to Software Development</li>
+      <h2 class="course-number">ITM 311</h2>
+      <li class="course-name">Introduction to Software Development</li>
       <li>Fall 2017</li>
       <h3>Course Content:</h3>
       <li>Object-oriented programming (focus on JAVA)</li>
@@ -36,8 +36,8 @@
   <!--ITMO 456-->
   <section>
     <ul>
-      <h2>ITMO 456</h2>
-      <li>Introduction to Open Source Operating Systems</li>
+      <h2 class="course-number">ITMO 456</h2>
+      <li class="course-name">Introduction to Open Source Operating Systems</li>
       <li>Spring 2018</li>
       <h3>Course Content:</h3>
       <li>Command-line use</li>
@@ -48,8 +48,8 @@
   <!--ITMM 471-->
   <section>
     <ul>
-      <h2>ITMM 471</h2>
-      <li>Project Management for Information Technology and Management</li>
+      <h2 class="course-number">ITMM 471</h2>
+      <li class="course-name">Project Management for Information Technology and Management</li>
       <li>Spring 2018</li>
       <h3>Course Content:</h3>
       <li>Planning projects that involve software, hardware and network implementation</li>
@@ -59,8 +59,8 @@
   <!--ITMO 440-->
   <section>
     <ul>
-      <h2>Introduction to Data Networks and the Internet</h2>
-      <li>ITMO 440</li>
+      <h2 class="course-number">ITMO 440</h2>
+      <li class="course-name">Introduction to Data Networks and the Internet</li>
       <li>Summer 2018</li>
       <h3>Course Content:</h3>
       <li>Network components and technologies</li>
