--- a/courses/index.html
+++ b/courses/index.html
@@ -10,11 +10,13 @@
   </header>
   <!--ITM 301-->
   <section>
+    <h2 class="course-number">ITM 301</h2>
     <ul>
-      <h2 class="course-number">ITM 301</h2>
       <li class="course-name">Introduction to OS and Hardware</li>
       <li>Fall 2017</li>
-      <h3>Course Content:</h3>
+      <li>
+          <h3>Course Content</h3>
+      </li>
       <li>System repair (software and hardware components)</li>
       <li>Troubleshooting</li>
       <li>Installation processes (software, hardware, and OS)</li>
@@ -22,11 +24,13 @@
   </section>
   <!--ITM 311-->
   <section>
+    <h2 class="course-number">ITM 311</h2>
     <ul>
-      <h2 class="course-number">ITM 311</h2>
       <li class="course-name">Introduction to Software Development</li>
       <li>Fall 2017</li>
-      <h3>Course Content:</h3>
+      <li>
+        <h3>Course Content</h3>
+      </li>
       <li>Object-oriented programming (focus on JAVA)</li>
       <li>Proper coding syntax</li>
       <li>Uses of GUI's</li>
@@ -35,11 +39,13 @@
   </section>
   <!--ITMO 456-->
   <section>
+    <h2 class="course-number">ITMO 456</h2>
     <ul>
-      <h2 class="course-number">ITMO 456</h2>
       <li class="course-name">Introduction to Open Source Operating Systems</li>
       <li>Spring 2018</li>
-      <h3>Course Content:</h3>
+      <li>
+        <h3>Course Content</h3>
+      </li>
       <li>Command-line use</li>
       <li>Installation and basic administration of Open Source Operating Systems</li>
       <li>Fedora and Ubuntu distributions of Linux</li>
@@ -47,22 +53,26 @@
   </section>
   <!--ITMM 471-->
   <section>
+    <h2 class="course-number">ITMM 471</h2>
     <ul>
-      <h2 class="course-number">ITMM 471</h2>
       <li class="course-name">Project Management for Information Technology and Management</li>
       <li>Spring 2018</li>
-      <h3>Course Content:</h3>
+      <li>
+        <h3>Course Content</h3>
+      </li>
       <li>Planning projects that involve software, hardware and network implementation</li>
       <li>Agile Project Management skills</li>
     </ul>
   </section>
   <!--ITMO 440-->
   <section>
+    <h2 class="course-number">ITMO 440</h2>
     <ul>
-      <h2 class="course-number">ITMO 440</h2>
       <li class="course-name">Introduction to Data Networks and the Internet</li>
       <li>Summer 2018</li>
-      <h3>Course Content:</h3>
+      <li>
+        <h3>Course Content</h3>
+      </li>
       <li>Network components and technologies</li>
       <li>Internet architecture</li>
       <li>Protocols and troubleshooting</li>
