add remaining in-progress courses

--- a/courses/index.html
+++ b/courses/index.html
@@ -78,5 +78,33 @@
       <li>Protocols and troubleshooting</li>
     </ul>
   </section>
+  <!---ITMD 100-->
+  <section>
+    <h2 class="course-number">ITM 100</h2>
+    <ul>
+      <li class="course-name">Introduction to Information Technology as a Profession</li>
+      <li>Fall 2018 — In Progress</li>
+      <li>
+        <h3>Course Content</h3>
+      </li>
+      <li>Identify computing requirements to determine solutions</li>
+      <li>Overview on databases, information systems, and information technology</li>
+      <li>Analyze the need for effective and secure business solutions</li>
+    </ul>
+  </section>
+  <!---ITMD 361-->
+  <section>
+    <h2 class="course-number">ITMD 361</h2>
+    <ul>
+      <li class="course-name">Fundamentals of Web Development</li>
+      <li>Fall 2018 — In Progress</li>
+      <li>
+        <h3>Course Content</h3>
+      </li>
+      <li>Introduction to HTML and CSS</li>
+      <li>Creation of semantic, compliant web pages</li>
+      <li>Extensive use of Git and Node.js terminals</li>
+    </ul>
+  </section>
 </body>
 </html>
