--- a/resume/index.html
+++ b/resume/index.html
@@ -8,9 +8,11 @@
   <header>
     <!--Contact Information-->
     <h1 id="name">Sofia Martinez</h1>
-    <h2>smartinez@hawk.iit.edu</h2>
-    <h2>(312)256-5136</h2>
-    <h2>Chicago, IL</h2>
+    <ul id="contact information">
+      <li>smartinez@hawk.iit.edu</li>
+      <li>(312)256-5***</li>
+      <li>Chicago, IL</li>
+    <ul>
   </header>
   <section>
     <!--Skills Section-->
