add missing <ul> and <h#> tags in work experience section

--- a/resume/index.html
+++ b/resume/index.html
@@ -33,7 +33,7 @@
       <h2 class="section-header">Education</h2>
       <ul>
         <li>
-          <h3>Illinois Institute of Technology</h3>
+          <h3 class="school">Illinois Institute of Technology</h3>
         </li>
         <li>
           <h4>Bachelor of Information Technology and Management</h4>
@@ -43,7 +43,7 @@
       </ul>
       <ul>
         <li>
-          <h3>Jones College Prep</h3>
+          <h3 class="school">Jones College Prep</h3>
         </li>
         <li>
           <h4>High School Diploma</h4>
@@ -60,8 +60,12 @@
           <li>
             <h3>Chicago Youth Centers</h3>
           </li>
-          <li>Maker Lab Assistant</li>
-          <li>Summer Program Aide</li>
+          <li>
+            <h4>Maker Lab Assistant</h4>
+          </li>
+          <li>
+            <h4>Summer Program Aide</h4>
+          </li>
         </ul>
         <ul class="responsibilities">
           <li>Implementing STEM-based programs to engage and inspire young audiences</li>
@@ -70,24 +74,28 @@
           <li>Maintaining technology to keep software and hardware in good condition for successful use</li>
         </ul>
         <!--MSI-->
-        <li>
-          <h3>Museum of Science and Industry</h3>
-        </li>
-        <li>
-          <h4>Demonstration Facilitator</h4>
-        </li>
+        <ul>
+          <li>
+            <h3>Museum of Science and Industry</h3>
+          </li>
+          <li>
+            <h4>Demonstration Facilitator</h4>
+          </li>
+        </ul>
         <ul class="responsibilities">
           <li>Learned material and gave presentations on various science topics to museum guests</li>
           <li>Provided relevant answers to questions regarding the demonstration subject</li>
           <li>Improvised and tailored presentations to match the needs of different guest groups</li>
         </ul>
         <!--ASM-->
-        <li>
-          <h3>After School Matters</h3>
-        </li>
-        <li>
-          <h4>Stained Glass Artist</h4>
-        </li>
+        <ul>
+          <li>
+            <h3>After School Matters</h3>
+          </li>
+          <li>
+            <h4>Stained Glass Artist</h4>
+          </li>
+        </ul>
         <ul class="responsibilities">
           <li>Created individual stained-glass artworks that met deadlines and requirements</li>
           <li>Collaborated with peers to design and develop complex projects</li>
