add class tags to appropriate lines in education and work experience sections
focus on 'level', 'employer' and 'job-title' classes

--- a/resume/index.html
+++ b/resume/index.html
@@ -36,7 +36,7 @@
           <h3 class="school">Illinois Institute of Technology</h3>
         </li>
         <li>
-          <h4>Bachelor of Information Technology and Management</h4>
+          <h4 class="level">Bachelor of Information Technology and Management</h4>
         </li>
         <li>Expected May 2021</li>
         <li>Fall 2017 and Spring 2018 Dean's List</li>
@@ -46,7 +46,7 @@
           <h3 class="school">Jones College Prep</h3>
         </li>
         <li>
-          <h4>High School Diploma</h4>
+          <h4 class="level">High School Diploma</h4>
         </li>
         <li>August 2013 - June 2017</li>
         <li>National Honors Society</li>
@@ -58,13 +58,13 @@
         <!--CYC-->
         <ul>
           <li>
-            <h3>Chicago Youth Centers</h3>
+            <h3 class="employer">Chicago Youth Centers</h3>
           </li>
           <li>
-            <h4>Maker Lab Assistant</h4>
+            <h4 class="job-title">Maker Lab Assistant</h4>
           </li>
           <li>
-            <h4>Summer Program Aide</h4>
+            <h4 class="job-title">Summer Program Aide</h4>
           </li>
         </ul>
         <ul class="responsibilities">
@@ -76,10 +76,10 @@
         <!--MSI-->
         <ul>
           <li>
-            <h3>Museum of Science and Industry</h3>
+            <h3 class="employer">Museum of Science and Industry</h3>
           </li>
           <li>
-            <h4>Demonstration Facilitator</h4>
+            <h4 class="job-title">Demonstration Facilitator</h4>
           </li>
         </ul>
         <ul class="responsibilities">
@@ -90,10 +90,10 @@
         <!--ASM-->
         <ul>
           <li>
-            <h3>After School Matters</h3>
+            <h3 class="employer">After School Matters</h3>
           </li>
           <li>
-            <h4>Stained Glass Artist</h4>
+            <h4 class="job-title">Stained Glass Artist</h4>
           </li>
         </ul>
         <ul class="responsibilities">
