--- a/resume/index.html
+++ b/resume/index.html
@@ -8,11 +8,11 @@
   <header>
     <!--Contact Information-->
     <h1 id="name">Sofia Martinez</h1>
-    <ul id="contact information">
+    <ul id="contact-information">
       <li>smartinez@hawk.iit.edu</li>
       <li>(312)256-5***</li>
       <li>Chicago, IL</li>
-    <ul>
+    </ul>
   </header>
   <section>
     <!--Skills Section-->
