add links to other site pages in 'navigation' list

--- a/about/index.html
+++ b/about/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <header>
+      <h1>About Me</h1>
       <!--Navigation Information-->
-      <h1>Navigation</h1>
       <ul id="links">
-        <li></li>
-        <li></li>
+        <li><a href="resume/index.html">Resume</a></li>
+        <li><a href="courses/index.html">Course List</a></li>
       </ul>
     </header>
   </body>
