fix links to other files/pages under navigation section

--- a/about/index.html
+++ b/about/index.html
@@ -8,9 +8,13 @@
     <header>
       <h1>About Me</h1>
       <!--Navigation Information-->
-      <ul id="links">
-        <li><a href="resume/index.html">Resume</a></li>
-        <li><a href="courses/index.html">Course List</a></li>
+      <ul id="nav-links">
+        <li>
+          <a href = "../resume/index.html">Resume</a>
+        </li>
+        <li>
+          <a href = "../courses/index.html">Course List</a>
+        </li>
       </ul>
     </header>
   </body>
