add skeleton for 'description', 'interests', and 'projects' sections

--- a/about/index.html
+++ b/about/index.html
@@ -17,5 +17,19 @@
         </li>
       </ul>
     </header>
+    <section>
+      <!--Description-->
+      <section>
+        <h3></h3>
+      </section>
+      <!--Interests-->
+      <section>
+        <h3></h3>
+      </section>
+      <!--Projects-->
+      <section>
+        <h3></h3>
+      </section>
+    </section>
   </body>
 </html>
