--- a/about/index.html
+++ b/about/index.html
@@ -20,15 +20,26 @@
     <section>
       <!--Description-->
       <section>
-        <h3></h3>
+        <h3>Summary</h3>
+        <p> I'm a second year undergraduate student at the Illinois Institute of Technology,
+            studying Information Technology and Management. Born and raised in Chicago, I've
+            decided to give back to my city by working at a non-profit organization for the
+            past few months.  I have interests in Web and Software Development as well as
+            Cyber Security, with a passion for creating technologies that will give users
+            the best experiences possible. 
+        </p>
       </section>
       <!--Interests-->
       <section>
-        <h3></h3>
+        <h3>Interests</h3>
+          <ul>
+          </ul>
       </section>
       <!--Projects-->
       <section>
-        <h3></h3>
+        <h3>Projects</h3>
+          <ul>
+          </ul>
       </section>
     </section>
   </body>
