add preliminary list items under 'Projects' section

--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
       </ul>
     </header>
     <section>
-      <!--Description-->
+      <!--Summary Section-->
       <section>
         <h3>Summary</h3>
         <p> I'm a second year undergraduate student at the Illinois Institute of Technology,
@@ -26,19 +26,24 @@
             decided to give back to my city by working at a non-profit organization for the
             past few months.  I have interests in Web and Software Development as well as
             Cyber Security, with a passion for creating technologies that will give users
-            the best experiences possible. 
+            the best experiences possible.
         </p>
       </section>
-      <!--Interests-->
+      <!--Hobbies and Interests Section-->
       <section>
         <h3>Interests</h3>
           <ul>
+            <li></li>
+            <li></li>
+            <li></li>
           </ul>
       </section>
-      <!--Projects-->
+      <!--Projects Section-->
       <section>
         <h3>Projects</h3>
           <ul>
+            <li>Kiosk Vending Machine Program using JAVA</li>
+            <li>Two-User Tic Tac Toe Game using C++</li>
           </ul>
       </section>
     </section>
