add list items to 'Interests' section

--- a/about/index.html
+++ b/about/index.html
@@ -33,9 +33,12 @@
       <section>
         <h3>Interests</h3>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Creative Writing</li>
+            <li class="list-description">Poetry, Stories</li>
+            <li>Painting</li>
+            <li class="list-description">Watercolors, Oils, Acrylics</li>
+            <li>Photography</li>
+            <li>Coding</li>
           </ul>
       </section>
       <!--Projects Section-->
