fix errors with navigation links

--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
     <title>About Me</title>
     <meta charset="utf-8" />
@@ -10,14 +10,15 @@
       <!--Navigation Information-->
       <ul id="nav-links">
         <li>
-          <a href = "../resume/index.html">Resume</a>
+          <a href="../resume">Resume</a>
         </li>
         <li>
-          <a href = "../courses/index.html">Course List</a>
+          <a href="../courses">Course List</a>
         </li>
       </ul>
     </header>
     <section>
+			<h2>Information</h2>
       <!--Summary Section-->
       <section>
         <h3>Summary</h3>
