--- a/courses/index.html
+++ b/courses/index.html
@@ -6,6 +6,15 @@
 </head>
 <body>
   <header>
+    <!--Navigation Information-->
+    <ul id="nav-links">
+      <li>
+        <a href="../about">About</a>
+      </li>
+      <li>
+        <a href="../resume">Resume List</a>
+      </li>
+      </ul>
     <h1 id="site-description">Summary of courses related to IT taken at the Illinois Institute of Technology</h1>
   </header>
   <!--ITM 301-->
