add navigation links to 'About' and 'Courses' pages

--- a/resume/index.html
+++ b/resume/index.html
@@ -6,6 +6,15 @@
 </head>
 <body>
   <header>
+    <!--Navigation Information-->
+    <ul id="nav-links">
+      <li>
+        <a href="../about">About</a>
+      </li>
+      <li>
+        <a href="../courses">Course List</a>
+      </li>
+    </ul>
     <!--Contact Information-->
     <h1 id="name">Sofia Martinez</h1>
     <ul id="contact-information">
