added missing employment length information and additional item to activities list

--- a/resume/index.html
+++ b/resume/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <header>
-    <!--Navigation Information-->
+    <!--Navigation Links-->
     <ul id="nav-links">
       <li>
         <a href="../about">About</a>
@@ -72,9 +72,11 @@
           <li>
             <h4 class="job-title">Maker Lab Assistant</h4>
           </li>
+          <li>February 2018 - Present</li>
           <li>
             <h4 class="job-title">Summer Program Aide</h4>
           </li>
+          <li>June 2018 - August 2018</li>
         </ul>
         <ul class="responsibilities">
           <li>Implementing STEM-based programs to engage and inspire young audiences</li>
@@ -90,6 +92,7 @@
           <li>
             <h4 class="job-title">Demonstration Facilitator</h4>
           </li>
+          <li>October 2017 - November 2017</li>
         </ul>
         <ul class="responsibilities">
           <li>Learned material and gave presentations on various science topics to museum guests</li>
@@ -104,6 +107,7 @@
           <li>
             <h4 class="job-title">Stained Glass Artist</h4>
           </li>
+          <li>February 2017 - August 2017</li>
         </ul>
         <ul class="responsibilities">
           <li>Created individual stained-glass artworks that met deadlines and requirements</li>
@@ -115,9 +119,10 @@
     <section>
       <h2 class="section-header">Activities</h2>
       <ul class="activities">
-        <li>Mentor Match Engine - Mentoring High School Students (2017-Present)</li>
-        <li>Greater Chicago Food Depository - Food Repack Sessions (2016-Present)</li>
-        <li>Anti-Cruelty Society - DIY Pet Beds (2016-2017)</li>
+        <li>Association for Computing-Machinery Women — Organization Member (2018) </li>
+        <li>Mentor Match Engine — Mentoring High School Students (2017 - Present)</li>
+        <li>Greater Chicago Food Depository — Food Repack Sessions (2016 - Present)</li>
+        <li>Anti-Cruelty Society — DIY Pet Beds (2016 - 2017)</li>
       </ul>
     </section>
   </section>
