add classes to list items in various sections
insert separate education and work experience items into articles in respective sections

--- a/resume/index.html
+++ b/resume/index.html
@@ -40,31 +40,36 @@
     <!--Education Section-->
     <section>
       <h2 class="section-header">Education</h2>
-      <ul>
-        <li>
-          <h3 class="school">Illinois Institute of Technology</h3>
-        </li>
-        <li>
-          <h4 class="level">Bachelor of Information Technology and Management</h4>
-        </li>
-        <li>Expected May 2021</li>
-        <li>Fall 2017 and Spring 2018 Dean's List</li>
-      </ul>
-      <ul>
-        <li>
-          <h3 class="school">Jones College Prep</h3>
-        </li>
-        <li>
-          <h4 class="level">High School Diploma</h4>
-        </li>
-        <li>August 2013 - June 2017</li>
-        <li>National Honors Society</li>
-      </ul>
+      <article>
+        <ul>
+          <li>
+            <h3 class="school">Illinois Institute of Technology</h3>
+          </li>
+          <li>
+            <h4 class="level">Bachelor of Information Technology and Management</h4>
+          </li>
+          <li class="time">Expected May 2021</li>
+          <li class ="achievement">Fall 2017 and Spring 2018 Dean's List</li>
+        </ul>
+      </article>
+      <article>
+        <ul>
+          <li>
+            <h3 class="school">Jones College Prep</h3>
+          </li>
+          <li>
+            <h4 class="level">High School Diploma</h4>
+          </li>
+          <li class="time">August 2013 - June 2017</li>
+          <li class="achievement">National Honors Society</li>
+        </ul>
+      </article>
     </section>
     <!--Work Experience Section-->
     <section>
-        <h2 class="section-header">Experience</h2>
-        <!--CYC-->
+      <h2 class="section-header">Experience</h2>
+      <!--CYC-->
+      <article>
         <ul>
           <li>
             <h3 class="employer">Chicago Youth Centers</h3>
@@ -72,11 +77,11 @@
           <li>
             <h4 class="job-title">Maker Lab Assistant</h4>
           </li>
-          <li>February 2018 - Present</li>
+          <li class="time">February 2018 - Present</li>
           <li>
             <h4 class="job-title">Summer Program Aide</h4>
           </li>
-          <li>June 2018 - August 2018</li>
+          <li class="time">June 2018 - August 2018</li>
         </ul>
         <ul class="responsibilities">
           <li>Implementing STEM-based programs to engage and inspire young audiences</li>
@@ -84,7 +89,9 @@
           <li>Collaborating with coworkers to organize and schedule workshops and events</li>
           <li>Maintaining technology to keep software and hardware in good condition for successful use</li>
         </ul>
-        <!--MSI-->
+      </article>
+      <!--MSI-->
+      <article>
         <ul>
           <li>
             <h3 class="employer">Museum of Science and Industry</h3>
@@ -92,14 +99,16 @@
           <li>
             <h4 class="job-title">Demonstration Facilitator</h4>
           </li>
-          <li>October 2017 - November 2017</li>
+          <li class="time">October 2017 - November 2017</li>
         </ul>
         <ul class="responsibilities">
           <li>Learned material and gave presentations on various science topics to museum guests</li>
           <li>Provided relevant answers to questions regarding the demonstration subject</li>
           <li>Improvised and tailored presentations to match the needs of different guest groups</li>
         </ul>
-        <!--ASM-->
+      </article>
+      <!--ASM-->
+      <article>
         <ul>
           <li>
             <h3 class="employer">After School Matters</h3>
@@ -107,13 +116,14 @@
           <li>
             <h4 class="job-title">Stained Glass Artist</h4>
           </li>
-          <li>February 2017 - August 2017</li>
+          <li class="time">February 2017 - August 2017</li>
         </ul>
         <ul class="responsibilities">
           <li>Created individual stained-glass artworks that met deadlines and requirements</li>
           <li>Collaborated with peers to design and develop complex projects</li>
           <li>Provided quality art pieces for the ASM store upon revising work after feedback</li>
         </ul>
+      <article>
     </section>
     <!--Activities Section-->
     <section>
