add tag endings and other elements to comply with linter and validator

--- a/resume/index.html
+++ b/resume/index.html
@@ -24,9 +24,10 @@
     </ul>
   </header>
   <section>
+    <h2>Information</h2>
     <!--Skills Section-->
     <section>
-      <h2 class="section-header">Skills</h2>
+      <h3 class="section-header">Skills</h3>
       <!--unordered list for skills-->
       <ul class="skills">
         <li>Knowledgeable with fundamental JAVA and C++ applications</li>
@@ -49,7 +50,7 @@
             <h4 class="level">Bachelor of Information Technology and Management</h4>
           </li>
           <li class="time">Expected May 2021</li>
-          <li class ="achievement">Fall 2017 and Spring 2018 Dean's List</li>
+          <li class="achievement">Fall 2017 and Spring 2018 Dean's List</li>
         </ul>
       </article>
       <article>
@@ -123,7 +124,7 @@
           <li>Collaborated with peers to design and develop complex projects</li>
           <li>Provided quality art pieces for the ASM store upon revising work after feedback</li>
         </ul>
-      <article>
+      </article>
     </section>
     <!--Activities Section-->
     <section>
