define 'semester' class for appropriate semester list items
add additional list components to some courses

--- a/courses/index.html
+++ b/courses/index.html
@@ -22,13 +22,14 @@
     <h2 class="course-number">ITM 301</h2>
     <ul>
       <li class="course-name">Introduction to OS and Hardware</li>
-      <li>Fall 2017</li>
+      <li class="semester">Fall 2017</li>
       <li>
           <h3>Course Content</h3>
       </li>
       <li>System repair (software and hardware components)</li>
       <li>Troubleshooting</li>
       <li>Installation processes (software, hardware, and OS)</li>
+      <li>Hands-on experience with laptop and computer hardware</li>
     </ul>
   </section>
   <!--ITM 311-->
@@ -36,13 +37,13 @@
     <h2 class="course-number">ITM 311</h2>
     <ul>
       <li class="course-name">Introduction to Software Development</li>
-      <li>Fall 2017</li>
+      <li class="semester">Fall 2017</li>
       <li>
         <h3>Course Content</h3>
       </li>
       <li>Object-oriented programming (focus on JAVA)</li>
       <li>Proper coding syntax</li>
-      <li>Uses of GUI's</li>
+      <li>Implementation of GUI's</li>
       <li>Final project consisted of coding an original program</li>
     </ul>
   </section>
@@ -51,13 +52,13 @@
     <h2 class="course-number">ITMO 456</h2>
     <ul>
       <li class="course-name">Introduction to Open Source Operating Systems</li>
-      <li>Spring 2018</li>
+      <li class="semester">Spring 2018</li>
       <li>
         <h3>Course Content</h3>
       </li>
-      <li>Command-line use</li>
+      <li>Extensive command-line use</li>
       <li>Installation and basic administration of Open Source Operating Systems</li>
-      <li>Fedora and Ubuntu distributions of Linux</li>
+      <li>Focus on Fedora and Ubuntu distributions of Linux</li>
     </ul>
   </section>
   <!--ITMM 471-->
@@ -65,11 +66,12 @@
     <h2 class="course-number">ITMM 471</h2>
     <ul>
       <li class="course-name">Project Management for Information Technology and Management</li>
-      <li>Spring 2018</li>
+      <li class="semester">Spring 2018</li>
       <li>
         <h3>Course Content</h3>
       </li>
       <li>Planning projects that involve software, hardware and network implementation</li>
+      <li>Effective ways to plan for projects to minimize error and meet criteria/deadlines</li>
       <li>Agile Project Management skills</li>
     </ul>
   </section>
@@ -78,7 +80,7 @@
     <h2 class="course-number">ITMO 440</h2>
     <ul>
       <li class="course-name">Introduction to Data Networks and the Internet</li>
-      <li>Summer 2018</li>
+      <li class="semester">Summer 2018</li>
       <li>
         <h3>Course Content</h3>
       </li>
@@ -92,7 +94,7 @@
     <h2 class="course-number">ITM 100</h2>
     <ul>
       <li class="course-name">Introduction to Information Technology as a Profession</li>
-      <li>Fall 2018 — In Progress</li>
+      <li class="semester">Fall 2018 — In Progress</li>
       <li>
         <h3>Course Content</h3>
       </li>
@@ -106,7 +108,7 @@
     <h2 class="course-number">ITMD 361</h2>
     <ul>
       <li class="course-name">Fundamentals of Web Development</li>
-      <li>Fall 2018 — In Progress</li>
+      <li class="semester">Fall 2018 — In Progress</li>
       <li>
         <h3>Course Content</h3>
       </li>
